# Robotic-Harvesting

./: README.md
Denso_RC7M_Digital_Twin/: README.md
Denso_RC7M_Digital_Twin/communication_tests/: README.md  listen_for_gateway.py  ubuntu_network_probe.py
Denso_RC7M_Digital_Twin/communication_tests/windows/: Send-Rc7mTelemetryTest.ps1  Test-Rc7mOrinReadOnly.ps1
Denso_RC7M_Digital_Twin/docs/: ARCHITECTURE.md  CAPABILITY_AUDIT.md  SAFETY.md  SERIAL_ROS_MOVEIT.md  STEP_BY_STEP.md
Denso_RC7M_Digital_Twin/gateway_simulator/: fake_rc7m_gateway.py
Denso_RC7M_Digital_Twin/gateway_windows/: README.md
Denso_RC7M_Digital_Twin/moveit_config/: README.md  moveit_controllers.yaml
Denso_RC7M_Digital_Twin/protocol/: README.md  telemetry_v1.schema.json
Denso_RC7M_Digital_Twin/ros2_ws/src/denso_rc7m_bringup/: package.xml  setup.cfg  setup.py
Denso_RC7M_Digital_Twin/ros2_ws/src/denso_rc7m_bringup/launch/: serial_gateway.launch.py  telemetry_bridge.launch.py
Denso_RC7M_Digital_Twin/ros2_ws/src/denso_rc7m_gateway/: package.xml  setup.cfg  setup.py
Denso_RC7M_Digital_Twin/ros2_ws/src/denso_rc7m_gateway/config/: gateway.yaml  serial_gateway.yaml
Denso_RC7M_Digital_Twin/ros2_ws/src/denso_rc7m_gateway/denso_rc7m_gateway/: serial_gateway.py  serial_protocol.py  serial_read_test.py  telemetry_bridge.py
Denso_RC7M_Digital_Twin/ros2_ws/src/denso_rc7m_interfaces/: CMakeLists.txt  package.xml
Denso_RC7M_Digital_Twin/ros2_ws/src/denso_rc7m_interfaces/msg/: ControllerState.msg
Denso_RC7M_Digital_Twin/scripts/: build.sh  run_bridge.sh
Denso_RC7M_Digital_Twin/unity/: README.md
Scan_app/: README.md  main.py  requirements.txt
Scan_app/configs/: default_config.yaml
Scan_app/core/: calibration.py  camera_manager.py  mesh_generation.py  postprocessing.py  project_io.py  segmentation.py  stereo_reconstruction.py  stitching.py  turntable_controller.py
Scan_app/gui/: main_window.py  widgets.py
Unity_Digital_Twin/: .gitignore  README.md
Unity_Digital_Twin/Assets/HarvestingUI/Resources/UI/: HarvestDashboard.uss  HarvestDashboard.uxml
Unity_Digital_Twin/Assets/HarvestingUI/Scripts/: AppBootstrapper.cs  DashboardController.cs  DashboardState.cs  DemoRobotStateSource.cs  Harvesting.DigitalTwin.UI.asmdef  IRobotStateSource.cs  RosStateAdapter.cs  SparklineElement.cs
ros2_harvesting_ws/: README.md  third_party.repos
ros2_harvesting_ws/docs/: ARCHITECTURE.md  DIGITAL_TWIN.md  INTERFACES.md  MPC.md  ROADMAP.md  SAFETY.md  UBUNTU_22_04_SETUP.md  UNITY_INTEGRATION.md  UNITY_UI_SPEC.md
ros2_harvesting_ws/scripts/: build_humble_workspace.sh  run_health_monitoring.sh  run_mpc_shadow.sh
ros2_harvesting_ws/src/fanuc_hardware_interface/: README.md
ros2_harvesting_ws/src/harvest_ai_manager/: README.md
ros2_harvesting_ws/src/harvest_bringup/: README.md  package.xml  setup.cfg  setup.py
ros2_harvesting_ws/src/harvest_bringup/launch/: health_monitoring.launch.py  mpc_shadow.launch.py
ros2_harvesting_ws/src/harvest_condition_monitor/: README.md  package.xml  setup.cfg  setup.py
ros2_harvesting_ws/src/harvest_condition_monitor/config/: condition_monitor.yaml
ros2_harvesting_ws/src/harvest_condition_monitor/harvest_condition_monitor/: condition_monitor.py
ros2_harvesting_ws/src/harvest_control/: README.md
ros2_harvesting_ws/src/harvest_description/: README.md
ros2_harvesting_ws/src/harvest_digital_twin/: README.md  package.xml  setup.cfg  setup.py
ros2_harvesting_ws/src/harvest_digital_twin/config/: twin_monitor.yaml
ros2_harvesting_ws/src/harvest_digital_twin/harvest_digital_twin/: twin_monitor.py
ros2_harvesting_ws/src/harvest_interfaces/: CMakeLists.txt  README.md  package.xml
ros2_harvesting_ws/src/harvest_interfaces/msg/: AssetHealth.msg  MaintenancePrediction.msg  MpcStatus.msg  SceneEntity.msg  SceneEntityArray.msg  TwinResidual.msg
ros2_harvesting_ws/src/harvest_motion_planning/: README.md
ros2_harvesting_ws/src/harvest_mpc_controller/: README.md  package.xml  setup.cfg  setup.py
ros2_harvesting_ws/src/harvest_mpc_controller/config/: mpc.yaml
ros2_harvesting_ws/src/harvest_mpc_controller/harvest_mpc_controller/: mpc_reference.py
ros2_harvesting_ws/src/harvest_perception/: README.md
ros2_harvesting_ws/src/harvest_predictive_maintenance/: README.md  package.xml  setup.cfg  setup.py
ros2_harvesting_ws/src/harvest_predictive_maintenance/config/: maintenance_predictor.yaml
ros2_harvesting_ws/src/harvest_predictive_maintenance/harvest_predictive_maintenance/: maintenance_predictor.py
ros2_harvesting_ws/src/harvest_safety/: README.md
ros2_harvesting_ws/src/harvest_task_manager/: README.md
ros2_harvesting_ws/src/harvest_unity_bridge/: CMakeLists.txt  README.md  package.xml
ros2_harvesting_ws/src/harvest_unity_bridge/config/: unity_bridge.yaml
