<?xml version="1.0"?>
<package format="3">
  <name>harvest_bringup</name>
  <version>0.1.0</version>
  <description>Launch composition for the robotic harvesting system.</description>
  <maintainer email="maintainer@example.com">Harvesting Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>harvest_condition_monitor</exec_depend>
  <exec_depend>harvest_digital_twin</exec_depend>
  <exec_depend>harvest_mpc_controller</exec_depend>
  <exec_depend>harvest_predictive_maintenance</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
