<?xml version="1.0"?>
<package format="3">
  <name>harvest_condition_monitor</name>
  <version>0.1.0</version>
  <description>Transparent condition and anomaly monitoring for harvesting assets.</description>
  <maintainer email="maintainer@example.com">Harvesting Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>harvest_interfaces</depend>
  <export><build_type>ament_python</build_type></export>
</package>
