<?xml version="1.0"?>
<package format="3">
  <name>harvest_unity_bridge</name>
  <version>0.1.0</version>
  <description>ROS-side contracts and configuration for the Unity digital twin.</description>
  <maintainer email="maintainer@example.com">Harvesting Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>harvest_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
