<?xml version="1.0"?>
<package format="3">
  <name>denso_rc7m_interfaces</name>
  <version>0.1.0</version>
  <description>Messages for the legacy DENSO RC7M gateway.</description>
  <maintainer email="maintainer@example.com">Robotics Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export><build_type>ament_cmake</build_type></export>
</package>
